force-app/main/default/objects/AFT_File_Setting__mdt/AFT_File_Setting__mdt.object-meta.xml
<CustomObject>
    <label>AFT File Setting</label>
    <pluralLabel>AFT File Settings</pluralLabel>
</CustomObject>