force-app/main/default/objects/AFT_File_Setting__mdt/fields/Account_Number_for_Returns__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_for_Returns__c</fullName>
    <label>Account Number for Returns</label>
    <length>12</length>
    <type>Text</type>
</CustomField>