force-app/main/default/objects/AFT_File_Setting__mdt/fields/Destination_Data_Centre__c.field-meta.xml
<CustomField>
    <fullName>Destination_Data_Centre__c</fullName>
    <label>Destination Data Centre</label>
    <length>5</length>
    <type>Text</type>
</CustomField>