force-app/main/default/objects/AFT_File_Setting__mdt/fields/Institutional_ID_for_Returns__c.field-meta.xml
<CustomField>
    <fullName>Institutional_ID_for_Returns__c</fullName>
    <label>Institutional ID for Returns</label>
    <length>9</length>
    <type>Text</type>
</CustomField>