force-app/main/default/objects/AFT_File_Setting__mdt/fields/Originator_Id__c.field-meta.xml
<CustomField>
    <fullName>Originator_Id__c</fullName>
    <label>Originator Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>