force-app/main/default/objects/AFT_File_Setting__mdt/fields/Originator_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Originator_Long_Name__c</fullName>
    <label>Originator Long Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>