force-app/main/default/objects/AFT_File_Setting__mdt/fields/Originator_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Originator_Short_Name__c</fullName>
    <label>Originator Short Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>